<resources>
    <string name="app_name">Event</string>
    <string name="ok">OK</string>

    <!-- event list   -->
    <string name="ivalid_item_title">Item inválido</string>
    <string name="ivalid_item_message">Este item está indisponível no momento</string>
    <string name="ivalid_item_button">Voltar</string>
    <string name="operate_unavailable">Operação Indisponível</string>
    <string name="error_fetch_events">Não foi possível buscar os eventos.</string>
    <string name="error_detail_event">Detalhes do evento indisponível.</string>
    <string name="error_items_not_found">Nenhum item foi encontrado</string>

    <!-- event item  -->
    <string name="price_format">R$ %1$.2f</string>
    <string name="price_format_simply">%1$.2f</string>
    <string name="price_format_long">Preço: <b>R$ %1$.2f</b></string>
    <string name="people_confirmed_format">Confirmados: <b>R$ %1$d</b></string>
    <string name="date_format">Data: %1$s</string>
    <string name="lat_format">Latitude: %1$f</string>
    <string name="lon_format">Longitude: %1$f</string>
    <string name="details">Detalhes</string>
    <string name="error_check_in_event">Não foi possível solicitar o Check-In pare este evento.</string>
    <string name="error_fetch_detail_event">Não foi possível buscar os detalhes do evento.</string>

    <!-- event detail item  -->
    <string name="back">Voltar</string>
    <string name="check_in">Check-in</string>
    <string name="location">Localização</string>
    <string name="description">Descrição</string>
    <string name="error">Erro</string>
    <string name="error_item_not_found">Item não encontrado</string>

    <!-- event form checkin  -->
    <string name="confirm">Confirmar</string>
    <string name="email_hint">email@company.com</string>
    <string name="name_hint">Nome</string>
    <string name="check_in_success">O seu Check-In foi realizado com sucesso!</string>
    <string name="check_in_error_service">Não foi possível fazer Check-In nesse evento.</string>
    <string name="email_error">Email inválido</string>
    <string name="name_error">Nome inválido</string>
</resources>