<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="temperature"
            type="aj.dev.event.data.model.Temperature" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_image"
                    android:layout_width="0dp"
                    android:layout_height="220dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_image_search" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/pg_loading_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/iv_image"
                    app:layout_constraintEnd_toEndOf="@id/iv_image"
                    app:layout_constraintStart_toStartOf="@id/iv_image"
                    app:layout_constraintTop_toTopOf="@id/iv_image"
                    tools:visibility="visible" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginVertical="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_image" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@id/divider">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:text="@{temperature.title}"
                        android:textColor="@color/teal_700"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="Titulo" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:text="@{@string/date_format(temperature.getDateFormated())}"
                        android:textColor="@color/teal_500"
                        android:textSize="16sp"
                        tools:text="Data: 22-12-2022" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:text="@string/location"
                        android:textColor="@color/teal_500"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_date" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/ll_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="4dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_location">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"
                            android:text="@{@string/lat_format(temperature.latitude)}"
                            android:textColor="@color/teal_500"
                            android:textSize="14sp"
                            tools:text="Latitude: 123123" />

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="4dp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"
                            android:text="@{@string/lon_format(temperature.longitude)}"
                            android:textColor="@color/teal_500"
                            android:textSize="14sp"
                            tools:text="Longitude: 123123" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:text="@{@string/price_format_long(temperature.price)}"
                        android:textColor="@color/teal_500"
                        android:textSize="16sp"
                        tools:text="Preço: R$ 29.99" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="4dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:text="@string/description"
                        android:textColor="@color/teal_700"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:paddingBottom="40dp"
                        android:text="@{temperature.description}"
                        android:textColor="@color/teal_500"
                        android:textSize="14sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pg_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/bt_checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:enabled="false"
            android:text="@string/check_in"
            app:backgroundTint="@color/orange_500"
            app:icon="@drawable/ic_book_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
